<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="URL">http://166.111.70.170:8080/web-1.0/</string>
    <string name="hello">Hello World, FootWithActivity!</string>
    <string name="app_name">FootWith</string>
    <string name="login_label_username">帐号</string>
    <string name="register_label_username">用户名</string>
    <string name="register_label_repassword">重复密码</string>
    <string name="register_label_password">密码</string>
    <string name="login_label_password">密码</string>
    <string name="login_username_hint">E-mail</string>
    <string name="login_button">登 陆</string>
    <string name="register_button">注 册</string>
    <string name="logo_text">Footwith You</string>
    <string name="tab1_text">首页</string>
    <string name="tab2_text">叮叮</string>
    <string name="tab3_text">我</string>
    <string name="register_label_nickname">nickname</string>
    <string name="register_label_email">Mail Address</string><string name="addplan_button">添加计划</string>

</resources>